''' Jetty '''

Added HTTP Forwarding to Jetty.
Added ForwardRequest servlet to handle the request forwarding.
In any config file CONTROL block add a forward section as follows.

{{{
        <CONTROLS>
        	<FORWARDS>
        		<FORWARD ACTIVE="Y" SRC="camera.jpg" DEST="http://127.0.0.1:8081/image.jpg" />
        	</FORWARDS>
        </CONTROLS>
}}}

== 4/Mar/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b92.zip V1.6-b92]  ==

''' Macros '''

Fixed issue where macros with a KEY being replaced by an EXTRA field would not correctly populate the KEY when run from a cient button.


''' General '''

Added the ability to use strings rather than numbers as a device key in a model configuration file.  Use the folling call in the models startup code
{{{
   setDeviceKeyString (true) 
}}}



== 1/Dec/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b91.zip V1.6-b91] [attachment:wiki:SoftwareReleases:eLife-1.6b91-libs.zip Libs-V1.6b91] ==

''' Started '''

Resolved issues with Macro and Sript list not being sent on client attatch if there had previously been a Script or Macro operation on the server.

== 16/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b90.zip V1.6-b90] ==

''' CBUS '''

Possible fix for CBUS startup issues.

== 14/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b89.zip V1.6-b89] ==

''' Jetty '''

Hack to get rid of firefox's 3.0's broken favicon.ico handling. 

== 13/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b88.zip V1.6-b88]   [attachment:wiki:SoftwareReleases:eLife-1.6b88-libs.zip Libs-V1.6b88] ==

'''Serial '''

Incorporated RXTX serial library back into system. Issue [ticket:744]

''' Web Client '''

Add further redirection instruction on logout to try to work with Firefox better. Ticket [ticket:742]

Ensure session is not incorrectly accessed if the service was not setup properly for some reason. Ticket [ticket:736]
 
Simplied session counting procedure.Tickedt [ticket:746]

''' CBUS '''
