@@ -1,4 +1,4 @@
-#Mon Dec 01 13:48:11 EST 2008
+#Sun Apr 12 23:40:59 EST 2009
 major_version=1.6b
-minor_version=92
+minor_version=94
 app_name=eLife
